log
Fri 29 Mar 2024 07:37:06 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
898716f
Fri 29 Mar 2024 07:41:16 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
fe33c70
Fri 29 Mar 2024 07:47:00 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b83449b
Fri 29 Mar 2024 07:50:21 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1c4dfa6
Fri 29 Mar 2024 07:50:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4cb4a89
Fri 29 Mar 2024 07:51:10 PM UTC: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  2|5
total_score: 15/70
619536b
Fri 29 Mar 2024 07:52:12 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|5
total_score: 15/70
e53f6d8
Fri 29 Mar 2024 07:53:37 PM UTC: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  2|5
total_score: 15/70
5723060
Fri 29 Mar 2024 07:56:26 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
40fc7a8
Fri 29 Mar 2024 08:02:12 PM UTC: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|0
615860c
Fri 29 Mar 2024 08:03:59 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
602050c
Fri 29 Mar 2024 08:04:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f4c0124
Fri 29 Mar 2024 08:05:23 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
615e324
Fri 29 Mar 2024 08:05:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
95cc00b
Fri 29 Mar 2024 08:06:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
2607516
Fri 29 Mar 2024 08:06:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0875892
Fri 29 Mar 2024 08:07:36 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
ed55770
Fri 29 Mar 2024 08:08:51 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
a8d5e1a
Fri 29 Mar 2024 08:09:05 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
4a0f89d
Fri 29 Mar 2024 08:09:18 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
7269b5d
Fri 29 Mar 2024 08:10:23 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fc14b16
Fri 29 Mar 2024 08:11:17 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|4
total_score: 25/70
9721cba
Fri 29 Mar 2024 08:11:31 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
f0520d2
Fri 29 Mar 2024 08:12:19 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9f6f873
Fri 29 Mar 2024 08:12:35 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
c82a7d2
Fri 29 Mar 2024 08:14:16 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
eb950b3
Fri 29 Mar 2024 08:14:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a57384
